--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,18 @@
     justify-content: center; 
 }
 
+h1{
+    border:20px;
+    margin:60px;
+    padding: 0px;
+    
+}
+
+.header{
+    border: 10px;
+   
+    padding: 0px;
+    margin:100px;
+    background-color: turquoise;
+    text-align: center;
+}
